test/trivial/bradc/entrypoint/main2.good
Error: Non-member functions must have parenthesized argument lists (main2.chpl:4)
