test/trivial/bradc/entrypoint/main2.chpl
var x = 32;
var y = -1;

def main {
  var y = 42;

  writeln("x is: ", x);
  writeln("y is: ", y);  
}
